--- a/.github/.htaccess
+++ b/.github/.htaccess
@@ -1,6 +1,6 @@
 <IfVersion < 2.4>
-    order allow,deny
-    deny from all
+    Order deny,allow
+    Deny from all
 </IfVersion>
 <IfVersion >= 2.4>
     Require all denied
